# pandas-term

./: .gitignore  Makefile  README.md  github.csv  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
demo/: data.csv  pd.tape
src/: main.py
src/cli/: filter_commands.py  stats_commands.py  transform_commands.py
src/core/: filter_service.py  stats_service.py  transform_service.py
src/pandas_cli/: main.py
src/pandas_cli/cli/: aggregate_commands.py  filter_commands.py  options.py  stats_commands.py  transform_commands.py
src/pandas_cli/core/: aggregate.py  filtering.py  io_service.py  stats.py  stats_service.py  transform_service.py  transforms.py
src/pandas_term/: main.py
src/pandas_term/cli/: aggregate_commands.py  filter_commands.py  options.py  stats_commands.py  transform_commands.py  validators.py
src/pandas_term/core/: io_operations.py  validation.py
tests/: conftest.py
tests/cli/: test_aggregate_commands.py  test_filter_commands.py  test_merge_batch_commands.py  test_stats_commands.py  test_stdin.py  test_transform_commands.py  test_validators.py
tests/cli/snapshots/aggregate/: aggregate_commands.json  aggregate_empty.json  aggregate_test.json
tests/cli/snapshots/filter/: dropna_commands.json  empty_filter_commands.json  filter_commands.json  filter_empty.json  filter_test.json
tests/core/: test_aggregate.py  test_aggregate_service.py  test_filter_service.py  test_filtering.py  test_io_operations.py  test_io_service.py  test_parsing.py  test_stats.py  test_stats_service.py  test_transform_service.py  test_transforms.py  test_validation.py
(+14 files in other folders)
